Fixing the certificate PEM operations